# cloudflare-containers-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
container_src/: README.md  dependencies.py  main.py  proc.py  pyproject.toml  requirements.txt  utils.py
container_src/model/: feature_names.txt  model_metadata.txt  titanic_processed_data.csv  titanic_xgboost_model.onnx  train_model.py
public/: index.html  styles.css
src/: index.ts
test_scripts/: test-fastapi.py
