[project]
name = "container-src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.1",
    "onnx>=1.18.0",
    "onnxmltools>=1.14.0",
    "onnxruntime>=1.22.1",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "skl2onnx>=1.19.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.2",
]
